[gd_scene load_steps=4 format=3 uid="uid://cbvnbkxxasy0c"]

[ext_resource type="Script" uid="uid://l4tsxnhxjoh3" path="res://Scripts/UI/inventory_ui.gd" id="1_brbew"]
[ext_resource type="Script" uid="uid://cubot2gnt54tn" path="res://Scripts/Components/inventory_component.gd" id="3_vr5og"]
[ext_resource type="PackedScene" uid="uid://ceyx0wcxrc283" path="res://Scenes/slots_container.tscn" id="4_m65me"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_brbew")

[node name="SlotsContainer" parent="." instance=ExtResource("4_m65me")]
layout_mode = 1
anchors_preset = -1
anchor_right = 4.689
anchor_bottom = 3.6910002
offset_right = -187.56
offset_bottom = -147.64001

[node name="InventoryComponent" type="Node" parent="."]
script = ExtResource("3_vr5og")
metadata/_custom_type_script = "uid://cubot2gnt54tn"
